--- a/orchestrator-ms/pom.xml
+++ b/orchestrator-ms/pom.xml
@@ -20,10 +20,11 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.common</groupId>
+			<groupId>com.saga.orchestration.common</groupId>
 			<artifactId>common</artifactId>
 			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
+
 	</dependencies>
 	
 </project>
