--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,8 @@ services:
           MONGO_INITDB_ROOT_USERNAME: user
           MONGO_INITDB_ROOT_PASSWORD: pass
           MONGO_INITDB_DATABASE: test_db
+  redis:
+    image: redis:alpine
+    restart: always
+    ports:
+      - "6379:6379"
