--- a/inventory-ms/src/main/resources/redisson/redisson.yaml
+++ b/inventory-ms/src/main/resources/redisson/redisson.yaml
@@ -7,7 +7,7 @@ singleServerConfig:
   password: null
   subscriptionsPerConnection: 5
   clientName: null
-  address: "redis://127.0.0.1:6379"
+  address: "redis://localhost:6379"
   subscriptionConnectionMinimumIdleSize: 1
   subscriptionConnectionPoolSize: 50
   connectionMinimumIdleSize: 24
@@ -16,5 +16,3 @@ singleServerConfig:
   dnsMonitoringInterval: 5000
 threads: 16
 nettyThreads: 32
-codec: !<org.redisson.codec.MarshallingCodec> {}
-transportMode: "NIO"
